--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'postcss-preset-env';
 
 @keyframes spin {
   from {
@@ -14,6 +15,8 @@
 }
 
 .spinner {
+
+
   @apply inline-block w-8 h-8 border-4 border-gray-700 rounded-full;
   border-top-color: transparent;
   animation: spin 1s linear infinite;
